Improved Frigustell's article by *a lot*

--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -5,25 +5,30 @@ banner: "https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743952341/Sacro_Imp
 short_description: "Nação do Minecraft"
 ---
 
-**Frigustell**, ou o **Sacro Império de Frigustell**, é uma monarquia semi-constitucional soberana
-existente desde o Cup SMP 1, sucessora da **[República Democrática de
-Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
+**Frigustell**, ou o **Sacro Império de Frigustell**, é uma
+[monarquia](https://pt.wikipedia.org/wiki/Monarquia) semi-constitucional soberana existente desde o
+[Cup SMP 1](Cup_SMP_1), sucessora da
+[República Democrática de Kamchatskiy](República_Democrática_de_Kamchatskiy). É também o único país
+a compartilhar a etnia [brazilburguesa](Brazilburg) com [Waydines](Waydines), sua nação-prima. O
+país também possui uma população de 24 cidadãos (2025), fazendo-o a nação mais populosa do mundo.
 
-<QuickFacts>
+<QuickFacts title="Sacro Império de Frigustell">
     <CountrySymbols
         flag="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743952341/Sacro_Imp%C3%A9rio_de_Frigustell_imweoy.png"
         coatOfArms="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743953215/Imp%C3%A9rio_de_Frigustell_pnzq7d.png"
     />
     <tr>
         <td>Capital</td>
-        <td>Santuário</td>
+        <td>
+            <a href="Santuário">Santuário</a>
+        </td>
     </tr>
     <tr>
-        <td>Linguas Oficiais</td>
+        <td>Línguas oficiais</td>
         <td>
-            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_portuguesa">Português</a>
-            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_inglesa">Inglês</a>
-            <a href="https://pt.wikipedia.org/wiki/Mandarim_padr%C3%A3o">Mandarim</a>
+            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_portuguesa">Português</a> &centerdot;
+            <a href="https://pt.wikipedia.org/wiki/L%C3%ADngua_inglesa">inglês</a> &centerdot;
+            <a href="https://pt.wikipedia.org/wiki/Mandarim_padr%C3%A3o">mandarim</a>
         </td>
     </tr>
     <tr>
@@ -35,9 +40,9 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
     <tr>
         <td>Governo</td>
         <td>
-            Monarquia Semi-Constitucional,
-            <a href="https://pt.wikipedia.org/wiki/Democracia_direta">Democracia Direta</a> e
-            <a href="https://pt.wikipedia.org/wiki/Estado_unit%C3%A1rio">unitária</a>
+            <a href="https://pt.wikipedia.org/wiki/Monarquia">Monarquia</a>
+            semi-constitucional
+            <a href="https://pt.wikipedia.org/wiki/Unitarimso">unitária</a>
         </td>
     </tr>
     <tr class="small">
@@ -46,13 +51,26 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
             <a href="Don_Ravi">Don Ravi I</a>
         </td>
     </tr>
-    <tr class="small">
+    <tr>
         <td>Legislatura</td>
         <td>
-            <a href="Conselho_Real">Conselho Real (câmara alta)</a>
+            <a href="https://pt.wikipedia.org/wiki/Bicameralismo">Bicameral</a>
+        </td>
+    </tr>
+    <tr class="small">
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_baixa">Câmara Baixa</a>
         </td>
         <td>
-            <a href="Conselho_Popular">Conselho Popular (câmara baixa)</a>
+            <a href="Conselho_Popular_(Frigustell)">Conselho Popular</a>
+        </td>
+    </tr>
+    <tr class="small">
+        <td>
+            <a href="https://pt.wikipedia.org/wiki/C%C3%A2mara_alta">Câmara Alta</a>
+        </td>
+        <td>
+            <a href="Conselho_Real_(Frigustell)">Conselho Real</a>
         </td>
     </tr>
     <tr>
@@ -63,19 +81,15 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
         <td>2 de Janeiro de 2021</td>
     </tr>
     <tr class="small">
-        <td>Renomeação para Kamchatskiy</td>
-        <td>Janeiro de 2021</td>
-    </tr>
-    <tr class="small">
         <td>Entrada em Waydines</td>
-        <td>Final de Janeiro de 2021</td>
+        <td>~8 de Janeiro de 2021</td>
     </tr>
     <tr class="small">
         <td>Guerra Civil de Waydines</td>
         <td>9 de Outubro de 2022</td>
     </tr>
     <tr class="small">
-        <td>Incorporação à Waydines</td>
+        <td>Re-incorporação à Waydines</td>
         <td>15 de Janeiro de 2023</td>
     </tr>
     <tr class="small">
@@ -87,9 +101,9 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
         <td>24 cidadãos</td>
     </tr>
     <tr>
-        <td>Etnias</td>
+        <td>Etnia</td>
         <td>
-            <a href="Divinismo">Divinista</a> e <a href="Tribos_de_Chiro">Nativos Chi'ro</a>
+            <a href="Brazilburg">Brazilburguês</a> e <a href="Tribos_de_Chiro">Nativos Chi'ro</a>
         </td>
     </tr>
     <tr>
@@ -101,22 +115,16 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
                     <a href="Divinismo">Divinismo</a>
                 </li>
                 <li>
+                    33%
+                    <a href="https://pt.wikipedia.org/wiki/Agnosticismo">Agnosticismo</a>
+                </li>
+                <li>
                     22%
                     <a href="Madeísmo">Madeísmo</a>
                 </li>
                 <li>
-                    33%
-                    <a href="https://pt.wikipedia.org/wiki/Agnosticismo"></a>Agnosticismo
-                </li>
-                <li>
                     11%
                     <a href="https://pt.wikipedia.org/wiki/Ate%C3%ADsmo">Ateísmo</a>
-                </li>
-                <li>
-                    9 Responderam
-                </li>
-                <li>
-                    16 Não Responderam
                 </li>
             </ul>
         </td>
@@ -124,7 +132,7 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
     <tr>
         <td>Moeda</td>
         <td>
-            <a href="Estrelado">Estrelado</a> (<code>EST</code>)
+            <a href="Estrelado">Estrelado</a> (<code>FGE</code>)
         </td>
     </tr>
 </QuickFacts>
@@ -134,26 +142,150 @@ Kamchatskiy](República_Democrática_de_Kamchatskiy)**.
 O nome "Frigustell" possui origens do filiado partidário do antigo
 [PDP](Partido_Democrático_Popular) após Don Ravi I, líder do partido, ter pedido por nomes para o
 novo país independente que seria criado no dia 20 de Março de 2023. O nome vem da fusão das palavras
-latinas "frigus" e "stella", "frio" e "estrela" respectivamente; a autoria do nome é de
-[EmaXZY](Ema_XZY). Diversos nomes haviam sido sugeridos, como Stelafistão, [Stellarigs](Stellarigs)
-(atual nome da companhia frigustelliana de matéria prima e energia), Stegellida, Stellida,
-Bergstern, Konrad e diversos outros nomes.
+latinas _frigus_ e _stella_ &mdash; significando “frio” e “estrela” respectivamente; a autoria do
+nome é de [EmaXZY](Ema_XZY). Diversos nomes haviam sido sugeridos, como Stelafistão, _Stellarigs_
+(atual nome da [companhia frigustelliana de matéria prima e energia](Stellarigs)), Stegellida,
+Stellida, Bergstern, Konrad e diversos outros nomes.
 
 # História
 
-## História Alternativa
+## Reintegração a Waydines
 
-<Picture 
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748299433/d86eec19-b0d4-4f45-9c6e-d60dff57d940.png" 
-    description="Capa do Diário de Ravi Mikélagos, escrito por Don Ravi I."
+Após os eventos do Don SMP 2 &mdash; um plano elaborado por [Emmeria](Emmeria),
+[Nonna Van Doren](Nonna_Van_Doren) e [Nordenbürgen](Nordenbürgen) para a desestabilização de
+Kamchatskiy &mdash; a [República Democrática](República_Democrática_de_Kamchatskiy) se encontrava em
+uma fraquíssima união, mesmo entre os membros mais nacionalistas, o que consequentemente levou a um
+plebiscito nacional, feito pelo próprio presidente de Kamchatskiy, Don Raviollone, para uma
+reintegração com Waydines, refletindo uma mudança de ideais após a
+[Revolução de Outubro](Guerra_Civil_de_Waydines), que possuia caráter soberano e nacionalista.
+Apesar disso, o plebiscito aconteceu em grande parte por influência direta de
+[Cupertino](Cupertino_Kurt), que convenceu o então presidente Don Raviollone a fazer um plebiscito
+pela união, o mesmo convenceu a população de Kamchatskiy a se juntar.
+
+Dez dias após o fim do Don SMP 2, no dia 20 de Janeiro de 2023 a República Democrática de
+Kamchatskiy se unia novamente com Waydines, permanecendo desta maneira por três meses até a criação
+de um novo país por Don Raviollone: O Reinado de Frigustell.
+
+Mesmo unidos pacificamente, houve conflitos de interesses entre Cupertino e Don Raviollone dentro da
+mais nova Terceira República de Waydines, enquanto Don Raviollone procurava fazer parte do partido
+[Social Democrata](<Social_Democratas_(Waydines)>) (<code>SD</code>) e ajudá-los com ideias,
+Cupertino buscava a rivalidade entre si próprio e Don Raviollone, o que fez com que fosse criado o
+[Partido Democrático Popular](Partido_Democrático_Popular) (<code>PDP</code>), também de caráter
+esquerdista, mas mais extremo que o partido Social Democrata, de natureza centro-esquerda.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743983263/PDP_tal0oq.png"
+    description="Logo do extinto Partido Democrático Popular (PDP)"
 />
 
-A história alternativa de Frigustell é baseada em uma adaptação dos fatos reais do universo de 
-Waydines para uma versão mais romantizada e, principalmente, inspirada na Bíblia Sagrada. É contada 
-por Don Ravi por meio dos livros canonizados do divinismo e em uma revisão da história real, por 
-enquanto, apenas pelo Diário de Ravi Mikélagos. A história alternativa retrata Frigustell como um 
-país sagrado, similarmente à Israel no velho testamento bíblico, com o povo atual sendo refugiados 
-de Waydines após uma perseguição religiosa massiva pelas autoridades religiosas ortodoxas do madeísmo.
+O Partido Democrático Popular representava a continuidade de Kamchatskiy dentro de Waydines, apesar
+de não ter seu próprio estado. Sua política e ideologia era similar ao antigo
+[PTK](Partido_dos_Trabalhadores_Kamchatskianos) e todos os seus membros foram ex-cidadãos de
+Kamchatskiy, o que contribuiu para mais um novo movimento secessionistadentro da república; com o
+principal motivo sendo mais conflitos de interesses entre ambos os partidos, que possuiam interesses
+distintos em relação a república.
+
+Os sociais-democratas de Waydines buscavam construir uma república que criava um extenso sistema de
+bem-estar social em par com políticas econômicas de natureza capitalista, enquanto os socialistas
+democráticos de Waydines &mdash; o Partido Democrático Popular &mdash; buscava recriar Kamchatskiy
+dentro de Waydines, por meio de mudança de nome, caráter nacional e bandeira e levando as políticas
+antigas de Kamchatskiy para Waydines. A ambição e caráter do PDP era grande, e esta foi a razão para
+que, no grupo onde se reunia os membros do partido, Don Raviollone uma segunda vez trouxesse a tona
+a proposta de criar um novo país, dessa vez, onde todos iriam construir juntos e estar unidos para o
+futuro incerto que aguardava o novo Reinado de Frigustell.
+
+## Independência de Frigustell
+
+> Kamchatskiy foi sobre isso; construírmos uma nação, uma cidade, um povo e uma cultura sem medo,
+> não em nome do seu país, mas em nome de nossa diversão [...]. Então, por que não fazemos isso
+> novamente?
+
+_&mdash; Don Ravi I_
+
+No dia 20 de Março de 2023, foi criado o servidor do Discord do Reinado de Frigustell, logo todos os
+membros do partido entraram, exceto Anni, que demorou mais alguns dias. O servidor existiu em
+silêncio até aproximadamente o dia 16 de Abril, dia das eleições para o
+[Parlamento de Waydines](Parlamento_de_Waydines), quando Frigustell, dessa vez pacificamente,
+declarou independência de Waydines. A independência foi recebida de forma calorosa por Cupertino,
+que se opôs fortemente à secessão e ameaçou uma guerra contra o novo país, que não contava com a
+garantia de independência de nenhum outro país. Apesar da revolta inicial de Cupertino, ele aceita a
+independência de Frigustell e envia uma carta resposta à independência de Frigustell, mencionando
+que a república buscaria relações amigáveis com o reinado e buscaria acordos benéficos para ambas as
+nações.
+
+Nesse momento, Frigustell pôde ter chance de sobreviver pacificamente, sem a necessidade de uma
+força armada poderosa para garantir sua independência ou apoio internacional. Nos meses seguintes,
+surgia o Pacto de Mitterfurt, uma confederação criada entre Frigustell, Waydines e Nordenbürgen, o
+que garantiu legitimidade para o Reinado de Frigustell, que, a este momento, procurava relações
+pacíficas e cooperativas com todos os países e seu lugar na geopolítica.
+
+Passado o tempo, foi se reunindo lentamente todos os membros antigos de Kamchatskiy, e logo
+Frigustell se via ao mesmo patamar de seu antecessor, com mais de 20 membros em seu país e com a
+participação de membros novos como [Jeanne](Don_Jeanne_Hart), Yuri, Mateus e [Kaio](Don_Kaio_DeLuna)
+(dessa vez, como cidadão de fato), que trocaram a antiga cidadania dos [Los Bozos](Los_Bozos). Foi
+durante este período que Frigustell saia do Pacto de Mitterfurt, buscando a criação de seu próprio
+bloco econômico e que se auto-declarava um império, criando-se assim, o Sacro Império de Frigustell.
+Agora, o império buscava estabelecer colônias e crescer sua empresa estatal, a
+[Stellarigs](Stellarigs), que se especializa na extração de minérios, refinamento e criação de bens
+de consumo para outros mercados de produtos e consumidores, tanto nacionais quanto internacionais;
+uma mudança grande comparada com a antiga política de direitos de investimento em território
+nacional.
+
+## Pacto de Mitterfurt
+
+O Pacto de Mitterfurt foi uma confederação ratificada e assinada pelo então Reinado de Frigustell,
+República Parlamentarista de Waydines e Kaiserreich de Nordenbürgen no dia 23 de Julho de 2023.
+Antecessora da União Elisiana, com princípios similares a ela: a defesa mútua, cooperação econômica
+e diplomática, um sistema monetário próprio e livre circulação de pessoas entre países.
+
+Similarmente à União Elisiana, o Pacto de Mitterfurt possuia sua própria câmara legislativa, chamada
+apenas como "Parlamento", nunca houve representantes eleitos para a câmara legislativa da
+confederação.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745547945/c4b45794-66a3-4a6d-996d-40d047cbf725.png"
+    description="Resposta de Don Ravi I à ameaça de Portugueskiy."
+/>
+
+O Pacto de Mitterfurt foi desfeito após o dia 25 de Novembro do mesmo ano, com a saída de Frigustell
+no dia 24, que procurava seguir seu próprio caminho fora da confederação. Após a saída de
+Frigustell, a kaiserina Portugueskiy de Nordenbürgen (hoje xogum [Niszara](Niszara_Ryūsei)), envia
+uma ameaça em forma de ataques pessoais ao líder de Frigustell, chamando-o de um péssimo e
+incompetente administrador de servidor, tanto devido ao Don SMP 2 quanto à uma votação não-oficial
+feita por Cupertino, que ocorreu no Cup SMP 1, para novo dono do servidor do Discord, assim como
+ameaçou à Frigustell uma guerra caso tivesse atitude beligerante. O texto original da ameaça foi
+perdido, sobrando apenas a resposta de Don Ravi I à Nordenbürgen.
+
+## Proclamação do Império
+
+No dia 8 de Junho 2024, devido ao rápido crescimento em atividade e populacional de Frigustell, Don
+Ravi I renomeia Frigustell, de Sacro Reinado de Frigustell para Sacro Império de Frigustell, mudando
+principalmente sua bandeira, de uma mais contemporânea que relevava a temática montanhosa de
+Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745549356/2025-03-15_21.35.27_yuwepw.png"
+    description="Complexo do WTC"
+/>
+
+Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
+Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
+de Bruno.
+
+# História Alternativa
+
+A história alternativa de Frigustell é baseada em uma adaptação dos fatos reais do universo de
+Waydines para uma versão mais romantizada e, principalmente, inspirada na Bíblia Sagrada. É contada
+por Don Ravi por meio dos livros canonizados do divinismo e em uma revisão da história real, por
+enquanto, apenas pelo Diário de Ravi Mikélagos. A história alternativa retrata Frigustell como um
+país sagrado, similarmente à Israel no velho testamento bíblico, com o povo atual sendo refugiados
+de Waydines após uma perseguição religiosa massiva pelas autoridades religiosas ortodoxas do
+madeísmo.
+
+<Picture
+    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748299433/d86eec19-b0d4-4f45-9c6e-d60dff57d940.png"
+    description="Capa do Diário de Ravi Mikélagos, escrito por Don Ravi I."
+/>
 
 Nesta versão, contada pelo Diário de Ravi Mikélagos, a Igreja de Bruno, administrada pela família de
 Ravi Mikélagos (Alfredo Mikélagos, Hermína Facchin e Bruno Mikélagos Facchin) crescia rapidamente em
@@ -233,133 +365,12 @@ Após isto, Frigustell continuou se expandindo, havendo pequenas batalhas entre 
 República Parlamentarista de Waydines, com uma delas sendo documentada no diário de Ravi Mikélagos,
 que, tanto para a nação quanto para o divinismo, é uma data de suma importância.
 
-## História Real
-
-> Kamchatskiy foi sobre isso, foi sobre vocês que construíram um país, uma cidade, um povo e uma
-> cultura sem medo, não em nome do seu país, mas em nome de nossa diversão, pois somos todos amigos.
-> Então, por que não fazemos isso novamente?
-
-_&mdash; `Don Ravi I`_
-
-Após os eventos do Don SMP 2 &mdash; um plano elaborado por
-[Emmeria](Emmeria), [Nonna Van Doren](Nonna_Van_Doren) e [Nordenbürgen](Nordenbürgen) para a
-desestabilização de Kamchatskiy &mdash; a
-[República Democrática](República_Democrática_de_Kamchatskiy) se encontrava em uma
-fraquíssima união, mesmo entre os membros mais nacionalistas, o que consequentemente levou a um
-plebiscito nacional, feito pelo próprio presidente de Kamchatskiy, Don Raviollone, para uma
-reintegração com Waydines, refletindo uma mudança de ideais após a [Revolução de Outubro](Guerra_Civil_de_Waydines), 
-que possuia caráter soberano e nacionalista. Apesar disso, o plebiscito aconteceu em grande parte 
-por influência direta de [Cupertino](Cupertino_Kurt), que convenceu o então presidente 
-Don Raviollone a fazer um plebiscito pela união, o mesmo convenceu a população de Kamchatskiy a se 
-juntar.
-
-Dez dias após o fim do Don SMP 2, no dia 20 de Janeiro de 2023 a República Democrática de
-Kamchatskiy se unia novamente com Waydines, permanecendo desta maneira por três meses até a criação
-de um novo país por Don Raviollone: O Reinado de Frigustell.
-
-Mesmo unidos pacificamente, houve conflitos de interesses entre Cupertino e Don Raviollone dentro da
-mais nova Terceira República de Waydines, enquanto Don Raviollone procurava fazer parte do partido
-[Social Democrata](Social_Democratas) (<code>SD</code>) e ajudá-los com ideias, Cupertino buscava a
-rivalidade entre si próprio e Don Raviollone, o que fez com que fosse criado o
-[Partido Democrático Popular](Partido_Democrático_Popular) (<code>PDP</code>), também de caráter
-esquerdista, mas mais extremo que o partido Social Democrata, de natureza centro-esquerda.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1743983263/PDP_tal0oq.png"
-    description="Logo do extinto Partido Democrático Popular (PDP)"
-/>
-
-O Partido Democrático Popular representava a continuidade de Kamchatskiy dentro de Waydines, apesar
-de não ter seu próprio estado. Sua política e ideologia era similar ao antigo 
-[PTK](Partido_dos_Trabalhadores_Kamchatskianos) e todos os seus membros foram ex-cidadãos de 
-Kamchatskiy, o que contribuiu para mais um novo movimento secessionistadentro da república; com o 
-principal motivo sendo mais conflitos de interesses entre ambos os partidos, que possuiam interesses
-distintos em relação a república.
-
-Os sociais-democratas de Waydines buscavam construir uma república que criava um extenso sistema de
-bem-estar social em par com políticas econômicas de natureza capitalista, enquanto os socialistas
-democráticos de Waydines &mdash; o Partido Democrático Popular &mdash; buscava recriar Kamchatskiy
-dentro de Waydines, por meio de mudança de nome, caráter nacional e bandeira e levando as políticas
-antigas de Kamchatskiy para Waydines. A ambição e caráter do PDP era grande, e esta foi a razão para
-que, no grupo onde se reunia os membros do partido, Don Raviollone uma segunda vez trouxesse a tona
-a proposta de criar um novo país, dessa vez, onde todos iriam construir juntos e estar unidos para o
-futuro incerto que aguardava o novo Reinado de Frigustell.
-
-No dia 20 de Março de 2023, foi criado o servidor do Discord do Reinado de Frigustell, logo todos os
-membros do partido entraram, exceto Anni, que demorou mais alguns dias. O servidor existiu em
-silêncio até aproximadamente o dia 16 de Abril, dia das eleições para o
-[Parlamento de Waydines](Parlamento_de_Waydines), quando Frigustell, dessa vez pacificamente,
-declarou independência de Waydines. A independência foi recebida de forma calorosa por Cupertino,
-que se opôs fortemente à secessão e ameaçou uma guerra contra o novo país, que não contava com a
-garantia de independência de nenhum outro país. Apesar da revolta inicial de Cupertino, ele aceita a
-independência de Frigustell e envia uma carta resposta à independência de Frigustell, mencionando
-que a república buscaria relações amigáveis com o reinado e buscaria acordos benéficos para ambas as
-nações.
-
-Nesse momento, Frigustell pôde ter chance de sobreviver pacificamente, sem a necessidade de uma
-força armada poderosa para garantir sua independência ou apoio internacional. Nos meses seguintes,
-surgia o Pacto de Mitterfurt, uma confederação criada entre Frigustell, Waydines e Nordenbürgen, o
-que garantiu legitimidade para o Reinado de Frigustell, que, a este momento, procurava relações
-pacíficas e cooperativas com todos os países e seu lugar na geopolítica.
-
-Passado o tempo, foi se reunindo lentamente todos os membros antigos de Kamchatskiy, e logo
-Frigustell se via ao mesmo patamar de seu antecessor, com mais de 20 membros em seu país e com a
-participação de membros novos como [Jeanne](Don_Jeanne_Hart), Yuri, Mateus e
-[Kaio](Don_Kaio_DeLuna) (dessa vez, como cidadão de fato), que trocaram a antiga cidadania dos
-[Los Bozos](Los_Bozos). Foi durante este período que Frigustell saia do Pacto de Mitterfurt,
-buscando a criação de seu próprio bloco econômico e que se auto-declarava um império, criando-se
-assim, o Sacro Império de Frigustell. Agora, o império buscava estabelecer colônias e crescer sua
-empresa estatal, a [Stellarigs](Stellarigs), que se especializa na extração de minérios, refinamento
-e criação de bens de consumo para outros mercados de produtos e consumidores, tanto nacionais quanto
-internacionais; uma mudança grande comparada com a antiga política de direitos de investimento em
-território nacional.
-
-## Pacto de Mitterfurt
-
-O Pacto de Mitterfurt foi uma confederação ratificada e assinada pelo então Reinado de Frigustell, 
-República Parlamentarista de Waydines e Kaiserreich de Nordenbürgen no dia 23 de Julho de 2023. 
-Antecessora da União Elisiana, com princípios similares a ela: a defesa mútua, cooperação econômica 
-e diplomática, um sistema monetário próprio e livre circulação de pessoas entre países.
-
-Similarmente à União Elisiana, o Pacto de Mitterfurt possuia sua própria câmara legislativa, chamada
-apenas como "Parlamento", nunca houve representantes eleitos para a câmara legislativa da
-confederação.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745547945/c4b45794-66a3-4a6d-996d-40d047cbf725.png"
-    description="Resposta de Don Ravi I à ameaça de Portugueskiy."
-/>
-
-O Pacto de Mitterfurt foi desfeito após o dia 25 de Novembro do mesmo ano, com a saída de Frigustell
-no dia 24, que procurava seguir seu próprio caminho fora da confederação. Após a saída de
-Frigustell, a kaiserina Portugueskiy de Nordenbürgen, envia uma ameaça ad hominem a Frigustell,
-chamando-o de um péssimo e incompetente administrador de servidor, tanto devido ao Don SMP 2 quanto
-à uma votação não-oficial feita por Cupertino, que ocorreu no Cup SMP 1, para novo dono do servidor
-do Discord, assim como ameaçou à Frigustell uma guerra caso tivesse atitude beligerante. O texto
-original da ameaça foi perdido, sobrando apenas a resposta de Don Ravi I à Nordenbürgen.
-
-## Sacro Império de Frigustell
-
-No dia 8 de Junho 2024, devido ao rápido crescimento em atividade e populacional de Frigustell, Don
-Ravi I renomeia Frigustell, de Sacro Reinado de Frigustell para Sacro Império de Frigustell, mudando
-principalmente sua bandeira, de uma mais contemporânea que relevava a temática montanhosa de
-Frigustell para a sua atual, similar à bandeira dos atuais países nórdicos.
-
-<Picture
-    image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1745549356/2025-03-15_21.35.27_yuwepw.png"
-    description="Complexo do WTC"
-/>
-
-Juntamente de sua bandeira, a capital Santuário foi expandida, agora abrigando o complexo do World
-Trade Center, o maior e mais alto complexo de todos os SMPs e também a sede do divinismo, a Igreja
-de Bruno.
-
-## Governo
+# Governo
 
 Frigustell passou a ter o sistema unitário de organização territorial, diferente de Kamchatskiy, os
 estados, agora chamados de províncias, não possuem mais suas próprias constituições, leis e código
 penal; agora possuem natureza municipal e contam com uma prefeitura composta quase exlusivamente de
-cleros da Igreja de Bruno. Essa mudança de sistema mais se igualou à mão de obra disponível para 
+cleros da Igreja de Bruno. Essa mudança de sistema mais se igualou à mão de obra disponível para
 tomarem estas funções; uma melhora significativa em comparação ao sistema extenso, subdimensionado e
 supérfluo da República Democrática de Kamchatskiy.
 
@@ -384,7 +395,7 @@ suficiente para ocuparem os postos existentes.
 Apesar de ser uma monarquia semi-constitucional, o sacro império não possui uma constituição pronta,
 com boa parte das leis e regimentos sendo ditados pelo imperador da nação.
 
-## Forças Armadas
+# Forças Armadas
 
 <Picture
     image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748290150/vindodecima_jqz4hn.png"
@@ -398,13 +409,13 @@ padronizando equipamentos entre suas forças. É criada a força aérea e o
 
 As forças armadas procuravam criar seus próprios modelos de tanques de guerra e aviões, porém, com
 os SMPs não contando com mods capazes de fazer isso, seu desenvolvimento foi adiado. Apesar da
-estagnação, a força aérea de Frigustell adota os modelos AE-01 "Asa de Anjo", inspirados diretamente
+estagnação, a força aérea de Frigustell adota os modelos Æ-01 "Asa de Anjo", inspirados diretamente
 no protótiro do F-22 chamado de YF-23, bombardeiros táticos WM-01 "Widowmaker", inspirados no modelo
 do F-111 Aardvark e bombardeiros estratégicos BMR-01, inspirado no Avro Vulcan britânico.
 
 <Picture
     image="https://res.cloudinary.com/dkw4vrkc1/image/upload/v1748227916/f0c5bfb1-95c4-4ff0-97d5-07036ef2ee40.png"
-    description="Modelos do WM-01 e AE-01, de cima para baixo."
+    description="Modelos do WM-01 e Æ-01, de cima para baixo."
 />
 
 Nas forças terrestres, Frigustell adotou modelos de tanques que valorizassem a velocidade e poder de
@@ -413,12 +424,12 @@ sofisticados. No setor dos tanques de guerra, adota uma política balanceada ent
 blindagem e alto poder de fogo, garantindo alta capacidade de sobrevivência e baixo tempo de
 deslocamento para posições.
 
-## Cultura
+# Cultura
 
 A cultura frigustelliana, por vezes chamada de cultura divinista, possui influências de Mitterfurt e
-especialmente Kamchat, dada a forte hereditariedade destes locais e a origem de seus cidadãos. Quase
-todos os cidadãos de Frigustell hoje em dia fazem parte da comunidade Monkeymill, um servidor do
-Discord voltado para jogos, conversas e eventos, seus membros são exclusivamente lusófonos.
+especialmente Kamchatskiy, dada a forte hereditariedade destes locais e a origem de seus cidadãos.
+Quase todos os cidadãos de Frigustell hoje em dia fazem parte da comunidade Monkeymill, um servidor
+do Discord voltado para jogos, conversas e eventos, seus membros são exclusivamente lusófonos.
 
 33% das pessoas que responderam ao último censo religioso de Frigustell fazem parte da religião
 divinista, a religião de estado, enquanto 22% fazem parte do madeísmo, religião de origem
@@ -434,14 +445,16 @@ histórias alternativas e comemora a salvação e conversão em massa milagrosa 
 frigustellianos e waydineense durante uma batalha sangrenta, de acordo com o diário de Ravi
 Mikélagos, que conta esse evento com detalhes:
 
-> O formato do sol aparentava se distorcer no céu e no meio dele surgia uma estrela de oito pontas,
-> a luz solar não queimava mais a vista e todos os soldados olhavam hiptonizados ao sol, que dizia
-> para todos os soldados pararem de lutar, logo muitos soldados começaram a chorar e se ajoelharam
-> ao chão virados em direção ao sol, muitos confessavam seu arrependimento por pecar e, após esse
-> evento ter passado, todos os soldados enviados por Waydines a essa batalha haviam se convertido ao
-> divinismo e mais da metade tornaram-se cidadãos frigustellianos.
+```
+O formato do sol aparentava se distorcer no céu e no meio dele surgia uma estrela de oito pontas,
+a luz solar não queimava mais a vista e todos os soldados olhavam hiptonizados ao sol, que dizia
+para todos os soldados pararem de lutar, logo muitos soldados começaram a chorar e se ajoelharam
+ao chão virados em direção ao sol, muitos confessavam seu arrependimento por pecar e, após esse
+evento ter passado, todos os soldados enviados por Waydines a essa batalha haviam se convertido ao
+divinismo e mais da metade tornaram-se cidadãos frigustellianos.
+```
 
-_&mdash; `Diário de Ravi Mikélagos`_
+_Excerto do Diário de Ravi Mikélagos_
 
-O Sacro Império de Frigustell adotou este milagre solar como seu símbolo nacional, dada sua grande 
+O Sacro Império de Frigustell adotou este milagre solar como seu símbolo nacional, dada sua grande
 importância, estando presente tanto em seu brasão quanto em suas diversas bandeiras e logotipos.
