Fixed the prettier autoformatting in the Elysian Union's article

--- a/src/pt/uniao_elisiana.mdx
+++ b/src/pt/uniao_elisiana.mdx
@@ -29,13 +29,13 @@ habitantes (2024). A União Elisiana se descreve oficialmente como uma
         <td>
             <ul>
                 <li>
-                    Nenhuma{" "}
+                    <span>Nenhuma</span>
                     <sub>
                         (<i>de jure</i>)
                     </sub>
                 </li>
                 <li>
-                    <a href="Mitterfurt">Mitterfurt</a>{" "}
+                    <a href="Mitterfurt">Mitterfurt</a>
                     <sub>
                         (<i>de facto</i>)
                     </sub>
@@ -52,7 +52,7 @@ habitantes (2024). A União Elisiana se descreve oficialmente como uma
     <tr>
         <td>Tipo</td>
         <td>
-            <a href="https://pt.wikipedia.org/wiki/Uni%C3%A3o_continental">União continental</a>{" "}
+            <a href="https://pt.wikipedia.org/wiki/Uni%C3%A3o_continental">União continental</a>
             confederada
         </td>
     </tr>
@@ -74,8 +74,8 @@ habitantes (2024). A União Elisiana se descreve oficialmente como uma
         <td>Governo</td>
         <td>
             <a href="https://pt.wikipedia.org/wiki/Confedera%C3%A7%C3%A3o">Confederação</a>
-            <a href="https://pt.wikipedia.org/wiki/Supranacionalismo">supranacional</a>e
-            intergovenamental
+            <a href="https://pt.wikipedia.org/wiki/Supranacionalismo">supranacional</a>
+            <span>e intergovenamental</span>
             <a href="https://pt.wikipedia.org/wiki/Rep%C3%BAblica_parlamentarista">
                 parlamentarista
             </a>
