Implemented the embed_image field for Braviary's article

--- a/src/en/waydines.mdx
+++ b/src/en/waydines.mdx
@@ -175,12 +175,12 @@ president and Don Ravi as vice president. A first election was planned but never
 Additionally, during this period, Jobje and Wolfi left Waydines and did not participate in any other
 server.
 
-The most relevant event of this phase was the war between the Confederation of Crusoe — the name of
-the country created by Don Ravi that served as a “mask” for Waydines, in an environment where no
-more than two official countries could exist — and the [Faccists](Faccists) (not to be confused with
-fascists). During the conflict, Cupertino exploited a security breach in the server to obtain
-operator access, ensuring Waydines' victory. This period extended from the end of Fly SMP until
-[Delta SMP 3](Delta_SMP_3).
+The most relevant event of this phase was the war between the Confederation of Crusoe &mdash; the
+name of the country created by Don Ravi that served as a “mask” for Waydines, in an environment
+where no more than two official countries could exist &mdash; and the [Faccists](Faccists) (not to
+be confused with fascists). During the conflict, Cupertino exploited a security breach in the server
+to obtain operator access, ensuring Waydines' victory. This period extended from the end of Fly SMP
+until [Delta SMP 3](Delta_SMP_3).
 
 This period extended from the end of Fly SMP until [Delta SMP 3](Delta_SMP_3).
 
