--- a/src/pt/braviary.mdx
+++ b/src/pt/braviary.mdx
@@ -2,6 +2,7 @@
 id: "braviary"
 title: "Braviary"
 short_description: "Animal Notório"
+embed_image: "https://res.cloudinary.com/dp8usdrjl/image/upload/v1743048776/4bdb49a4-cf16-4742-a889-b399e9cecfab.png"
 ---
 
 > KA-KAW!
