Minor spelling mistake

--- a/src/pt/frigustell.mdx
+++ b/src/pt/frigustell.mdx
@@ -89,7 +89,7 @@ país também possui uma população de 24 cidadãos (2025), fazendo-o a nação
         <td>9 de Outubro de 2022</td>
     </tr>
     <tr class="small">
-        <td>Re-incorporação à Waydines</td>
+        <td>Reintegração a Waydines</td>
         <td>15 de Janeiro de 2023</td>
     </tr>
     <tr class="small">
